IMDIVV-84: Second bugfix on safari flebox. Need to remove t-position in markup instead.

--- a/Styles/css/legacy.css
+++ b/Styles/css/legacy.css
@@ -1200,7 +1200,7 @@ ol.row li {
 /* Flexbox based */
 .flex-row {
   display: flex;
-  flex-wrap: row wrap;
+  flex-wrap: wrap;
   margin-left: -10.5px;
   margin-right: -10.5px;
 }
@@ -5554,6 +5554,7 @@ blockquote small {
   position: absolute;
   z-index: 3;
   top: 4.5rem;
+  left: 0;
   border: 3px solid #f15540;
   background: #ffffff;
   margin-top: 0;
