--- a/Styles/global/2_base/_grid.less
+++ b/Styles/global/2_base/_grid.less
@@ -26,7 +26,7 @@ ul.row, ol.row {
 /* Flexbox based */
 .flex-row {
 	display: flex;
-  flex-wrap: row wrap;
+  flex-wrap: wrap;
 	margin-left:  (@gutter / -2);
 	margin-right: (@gutter / -2);
 	.col--fifth {
