--- a/Styles/global/3_blocks/_lightbox.less
+++ b/Styles/global/3_blocks/_lightbox.less
@@ -15,6 +15,7 @@
 		position: absolute;
 		z-index: 3;
 		top: 4.5rem;
+		left: 0;
 		border: 3px solid @color__orange;
 		background: @color__white;
 		margin-top: 0;
